objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Product_Id_old__c</fullName>
        <description>Field to maintain the related Product SF ID that was removed as part of the Product de duplication process
Exp Date: 31/12/2015</description>
        <label>Product Id - old</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_PBE_ID_check__c</fullName>
        <formula>Pricebook_Entry_Formula__c = Pricebook_entry_ID__c</formula>
        <label>PKI PBE ID check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricebook_entry_ID__c</fullName>
        <description>Unique Pricebook Entry Code for the product dedup process</description>
        <externalId>true</externalId>
        <label>PKI PriceBookEntry Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pricebook_entry_ID_old__c</fullName>
        <description>Field to store the old SFID of the Pricebook entry that was deleted as part of Product de dupe process. 
Exp Date : 31/12/2015</description>
        <label>Pricebook entry ID old</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Entry_Formula__c</fullName>
        <description>Field to generate the unique external ID for Pricebook</description>
        <formula>IF(ISBLANK(Product2.Partnum__c),&quot;&quot;,Product2.Partnum__c   + &apos;-&apos;+  Pricebook2.Name  + &apos;-&apos; + TEXT( CurrencyIsoCode ))</formula>
        <label>Pricebook Entry Formula</label>
        <type>Text</type>
    </fields>
</CustomObject>